# pool_search_assistant

./: .gitignore  Makefile  README.md  dump.rdb  pyproject.toml
app/: settings.py
app/core/pool/dto/: __init__.py  pool.py
app/core/pool/entities/: __init__.py  address.py  pool.py  pool_like.py
app/core/pool/protocols/: pool_analysis.py
app/core/pool/services/: pool_analysis.py
app/core/pool/usecase/: get_recommended_pools.py
app/core/pool/usecases/: __init__.py  get_recommended_pools.py  like_pool.py  unlike_pool.py
app/core/pool/utils/: pool_analysis.py
app/core/shared/entities/: entity.py  value_object.py
app/core/shared/exceptions/: base.py
app/core/shared/protocols/: __init__.py
app/core/shared/usecase/: __init__.py  usecase.py
app/core/user/dto/: __init__.py  session.py  user.py
app/core/user/entities/: user.py
app/core/user/exceptions/: __init__.py  user.py
app/core/user/protocols/: auth_sevice.py  hasher_password.py
app/core/user/services/: __init__.py  auth_service.py  hasher_password.py  jwt_service.py
app/core/user/usecases/: __init__.py  login.py  logout.py  register.py
app/infrastructure/db/redis/: connect.py
app/infrastructure/db/sqlalchemy/: connect.py
app/infrastructure/shared/: dao.py
app/infrastructure/store_data/dao/: __init__.py  pool.py  user.py
app/presentation/api/: di.py  main.py  open_api.py  routes.py
app/resources/: raw_data.csv
app/shared/: __init__.py  dto.py
deploy/: alembic.ini  backend.Dockerfile  example.env  prod.docker-compose.yml
docs/: пояснительная записка.odt
(+67 files in other folders)
