[tool.poetry]
name = "pool-search-assistant"
version = "0.1.0"
description = ""
authors = ["mihey <daniil53891@yandex.com>"]
readme = "README.md"
packages = [{include = "pool_search_assistant"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
alembic = "^1.9.2"
asyncpg = "^0.27.0"
fastapi = "^0.89.1"
pandas = "^1.5.3"
passlib = "^1.7.4"
pyjwt = "^2.6.0"
redis = "^4.4.2"
requests = "^2.28.2"
scikit-learn = "^1.2.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"


[tool.poetry.group.analysis.dependencies]
ipykernel = {version = "^6.20.2", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
